
 - the convert() method now returns an image of the same sample size as
   the source image.
   https://rt.cpan.org/Ticket/Display.html?id=28492

 - remove repeated text in Imager::Files
   http://rt.cpan.org/Ticket/Display.html?id=27589

 - be even more explicit that scale() and friends don't modify the source
   image, but return a new image.
   http://rt.cpan.org/Ticket/Display.html?id=28570

Imager 0.59 - 14 June 2007
===========

Bug fixes:

 - fixes a regression introduced by the fixes for RT 11972
   http://rt.cpan.org/Ticket/Display.html?id=27546

 - cropping outside the image would return an Imager object with
   no low-level image object, instead of returning false.
   Fixed by: Philip Gwyn (Leolo)
   http://rt.cpan.org/Ticket/Display.html?id=27509

Imager 0.58 - 16 May 2007
===========

No significant changes from 0.57_01.

Imager 0.57_01 - 11 May 2007
==============

 - added to_rgb16 to produce a 16-bit/sample version of an image

 - improve freetype 1.x text output efficiency

Bug fixes:

 - search another place for rgb.txt, and check all the places 
   Imager::Color checks when deciding whether to skip testing it
   http://rt.cpan.org/Ticket/Display.html?id=26064

 - use a convolution kernel size based on the stddev rather than a
   fixed size when performing a gaussian blur
   http://rt.cpan.org/Ticket/Display.html?id=25645

 - document the difference() method's mindist parameter, and debug it.

 - put the Imager release number in the Inline::C generated code to
   regenerate Inline code when a new release of Imager is installed.
   http://rt.cpan.org/Ticket/Display.html?id=26278

 - fix rendering on alpha channel images for the FreeType 1.x driver.
   http://rt.cpan.org/Ticket/Display.html?id=11972

 - fix rendering on alpha channel images for the T1lib driver.
   http://rt.cpan.org/Ticket/Display.html?id=11972

 - reworked library probing, we can now set more than one probe
   function for a library.  Disabled the default (non-freetype-config)